# Netflix-Studio-Connect

./: .replit  Dockerfile  README.md  activity.json  analytics.json  analytics_data.json  app.py  appai.py  cgptmain.py  content_analytics.json  contracts.json  design_guidelines.md  messages.json  pitches.json  projects.json  pyproject.toml  replit.md  requirements.txt  sedfvASfs  start.sh  users.json
